Add gh pages config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://leovertiz.github.io/chucknorris-jokes/",
+  "homepage": "https://leovertiz.github.io/ChuckNorris-jokes/",
   "name": "chucknorris-jokes",
   "version": "0.1.0",
   "private": true,
